fixed z-index of map so control doesn't appear over discussion

--- a/karxim/static_admin/css/main.css
+++ b/karxim/static_admin/css/main.css
@@ -111,6 +111,7 @@ input[type="checkbox"]{
 .top2{top:2em;}
 .top3{top:3em;}
 .top4{top:4em;}
+.level-1{z-index: -1}
 .level1{z-index:1}
 .level2{z-index:2}
 .level3{z-index:3}
